fix: broken style on dark mode (#110)

--- a/docs/assets/styles/variables.css
+++ b/docs/assets/styles/variables.css
@@ -301,11 +301,12 @@
   --input-filled-bg-focus: var(--c-bg);
   --input-filled-bg-disabled: var(--c-gray-light-4);
 
+  --input-outlined-bg-focus: var(--c-bg);
   --input-outlined-bg-disabled: var(--c-white-mute);
   --input-outlined-border: var(--c-divider);
   --input-outlined-border-focus: var(--c-black);
 
-  --input-clear-bg-disabled: var(--c-white);
+  --input-clear-bg-disabled: var(--c-bg);
 
   --input-focus-border: var(--c-black);
   --input-focus-bg: var(--c-white);
@@ -326,6 +327,12 @@
   --input-outlined-bg-disabled: var(--c-black-mute);
   --input-outlined-border-focus: var(--c-gray);
 
+  --input-filled-bg-disabled: var(--c-gray-dark-3);
+
+  --input-action-outlined-bg: var(--c-black-mute);
+  --input-action-outlined-bg-hover: var(--c-gray-dark-3);
+  --input-action-outlined-bg-focus: var(--c-gray-dark-2);
+
   --input-focus-border: var(--c-gray);
 }
 
@@ -334,8 +341,8 @@
  * -------------------------------------------------------------------------- */
 
 :root {
-  --card-bg: var(--c-white);
-  --card-bg-mute: var(--c-white-soft);
+  --card-bg: var(--c-bg);
+  --card-bg-mute: var(--c-bg-soft);
   --card-shadow-depth-1: var(--shadow-depth-1);
   --card-shadow-depth-2: var(--shadow-depth-2);
   --card-shadow-depth-3: var(--shadow-depth-3);
